# fastsim

./: .gitmodules  CMakeLists.txt  README.md  run.sh
fastsim_core/: CMakeLists.txt
fastsim_core/Log/: CMakeLists.txt
fastsim_core/Log/include/: log.h  logbacktrace.h  logentry.h  logfunction.h
fastsim_core/Log/logsrc/: log.cpp  logfunction.cpp  p_getIndent.cpp
fastsim_core/Log/logsrc/logbacktrace/: logbacktrace.cpp  logbacktrace.getTraceStr.cpp  logbacktrace_add.cpp  logbacktrace_getLevelTrace.cpp  logbacktrace_getTrace.cpp  logbacktrace_startTrace.cpp  logbacktrace_stopTrace.cpp
fastsim_core/include/: connection.h  fastsim_core.h  gate.h  gates.h  part.h  partsmanager.h
fastsim_core/include/default_parts/: and_gate.h
fastsim_core/include/exceptions/: part_exception.h
fastsim_core/src/: fastsim_core.cpp
fastsim_core/src/connection/: addPart.cpp
fastsim_core/src/default_parts/: and_gate.cpp
fastsim_core/src/exceptions/: part_exception.cpp
fastsim_core/src/fastsim_core/: connect.cpp
fastsim_core/src/gate/: gate.cpp
fastsim_core/src/part/: part.cpp
fastsim_core/src/partsmanager/: newPart.cpp  partsmanager.cpp
include/: part.h
include/fastsim/: connection.h  fastSimComponent.h  fastsim.h  implementationCommon.h  part.h  pin.h
src/connection/: connect.cpp  connection.cpp  optimize.cpp
src/fastsim/: addConnection.cpp  addPart.cpp  addPin.cpp  cleanConnections.cpp  cleanParts.cpp  cleanPins.cpp  fastsim.cpp
src/part/: part.cpp  setInput.cpp  setOutput.cpp
src/pin/: getState.cpp  optimize.cpp  pin.cpp  setState.cpp  toString.cpp
test/: CMakeLists.txt
test/src/: main.cpp
tests/: CMakeLists.txt
tests/include/: connection_globals.h  fastsim_globals.h  globals.h  part_globals.h  pin_globals.h
tests/src/Connection/: CMakeLists.txt  constructor.cpp  t_connect.cpp  t_constructor.cpp  t_optimize.cpp
tests/src/FastSIM/: CMakeLists.txt  connectionsManagement.cpp  constructor.cpp  partsManagement.cpp  t_pinsManagement.cpp
tests/src/Main/: CMakeLists.txt  main.cpp
tests/src/Part/: CMakeLists.txt  constructor.cpp  getset.cpp  t_destructor.cpp  t_getset.cpp
tests/src/Pin/: CMakeLists.txt  t_constructor.cpp  t_setState.cpp
tests/src/part/: constructor.cpp
tests/src/sampletest/: CMakeLists.txt
